--- a/Day10_music_player/index.html
+++ b/Day10_music_player/index.html
@@ -25,7 +25,10 @@
                 <source src="https://rr5---sn-npoldn7s.googlevideo.com/videoplayback?expire=1747850548&ei=1MAtaISUIcD5sfIPmvvFsQQ&ip=198.37.110.232&id=o-APciZUn7bPGYQo9GklErolgaGLcDHoDWUz7icZVQOKXl&itag=251&source=youtube&requiressl=yes&xpc=EgVo2aDSNQ%3D%3D&rms=au%2Cau&bui=AecWEAaavyi6AtAhr76ALhKb9oV5orcLlpPMBLBpPf0GLj62FLn9nFleDxJ2ltSnbyU5ukI6R5mNVCWU&vprv=1&svpuc=1&mime=audio%2Fwebm&ns=XCxPKE5I3effNXbMv4mchfAQ&rqh=1&gir=yes&clen=22066731&dur=1290.301&lmt=1706414762351995&keepalive=yes&lmw=1&c=TVHTML5&sefc=1&txp=5532434&n=OYD8xk4IZdKf4A&sparams=expire%2Cei%2Cip%2Cid%2Citag%2Csource%2Crequiressl%2Cxpc%2Cbui%2Cvprv%2Csvpuc%2Cmime%2Cns%2Crqh%2Cgir%2Cclen%2Cdur%2Clmt&sig=AJfQdSswRQIgKM2dAadZVqdv21l30WgdMblxyq7oaBbhacTmdyRYeksCIQDWYj_c29kM6hnFDYlAFG69lGFDcw9eOYbv3QIHZNpjLg%3D%3D&title=Magadheera+Telugu+Movie+Songs+%7C%7C+Jukebox+%7C%7C+Ram+Charan%2C+Kajal+Agarwal&redirect_counter=1&rm=sn-a5mee67e&rrc=13&fexp=24350590,24350737,24350827,24350961,24351173,24351177,24351495,24351528,24351594,24351638,24351658,24351662,24351757,24351790,24351864,24351866,24351907,24352018,24352019,24352023&req_id=dc3c2889b9afa3ee&cms_redirect=yes&cmsv=e&met=1747828956,&mh=5N&mip=2409:40f2:1003:5826:5c11:68da:6463:f7c6&mm=34&mn=sn-npoldn7s&ms=ltu&mt=1747828599&mv=m&mvi=5&pl=40&lsparams=met,mh,mip,mm,mn,ms,mv,mvi,pl,rms&lsig=ACuhMU0wRQIgdaz6y7G38wWx0r8o1JA5Z63Nb8AOsRPnv_P-LlmqGksCIQDElsxSFoBX2oZuAQ95WLC42PfO3tInWlmsUm3ym4G8qA%3D%3D" type="audio/mpeg">
             </audio>
             <input type="range" value="0" id="progress">
-
+            <div>
+                <span id="current-time">00:00</span> / 
+                <span id="total-time">00:00</span>
+            </div>
             <div class="controls">
                 <div>
                     <i class="fa-solid fa-backward"></i>  
